# PoetryApiFirstTemplate

./: README.md  generator.sh  open_api.yml
code/: pyproject.toml
code/generated_api/: security_api.py
code/generated_api/apis/: chat_api.py  chat_api_base.py  products_api.py  products_api_base.py  reviews_api.py  reviews_api_base.py
code/generated_api/models/: chat_query.py  chat_response.py  product.py  product_list_response.py  product_videos_inner.py  review.py  review_list_response.py
code/recommender/: __init__.py  __main__.py
code/recommender/impl/: __init__.py  products_api_impl.py
